--- a/button/animated/index.html
+++ b/button/animated/index.html
@@ -5,17 +5,15 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Página Inicial</title>
+    <title>Placeholder-Shown</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
 </head>
 
 <body>
 
-    <h1>Index</h1>
-
-    <a href="./loaders/basic/index.html">
-        Loaders
-    </a>
+    <button class="bubbly-button">Click Here!</button>
 
 </body>
 
