--- a/index.html
+++ b/index.html
@@ -7,15 +7,52 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Página Inicial</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
 </head>
 
 <body>
 
-    <h1>Index</h1>
+    <div class="container">
 
-    <a href="./loaders/basic/index.html">
-        Loaders
-    </a>
+        <h1>Conteúdos</h1>
+
+        <a href="./box-shadow/index.html">
+            Box-Shadow
+        </a>
+
+        <a href="./button/animated/index.html">
+            Button-Animated
+        </a>
+
+        <a href="./dark-mode-toggle/index.html">
+            Dark Mode Toggle
+        </a>
+
+        <a href="./loaders/basic/index.html">
+            Loaders - Basic
+        </a>
+
+        <a href="./loaders/custom/index.html">
+            Loaders - Custom
+        </a>
+
+        <a href="./loaders/endless/index.html">
+            Loaders - Endless
+        </a>
+
+        <a href="./placeholder/shown/index.html">
+            Placeholder - Shown
+        </a>
+
+        <a href="./scrollbar/index.html">
+            Scrollbar
+        </a>
+
+        <a href="./waves/index.html">
+            Waves
+        </a>
+
+    </div>
 
 </body>
 
