login com tema dark e animação

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             Waves
         </a>
 
+        <a href="./login-dark/index.html">
+            Login - Dark
+        </a>
+
     </div>
 
 </body>
