--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             Dark Mode Toggle
         </a>
 
+        <a href="./dropdown/index.html">
+            Dropdown
+        </a>
+
         <a href="./loaders/basic/index.html">
             Loaders - Basic
         </a>
