--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Página Inicial</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" href="assets/fav-icon.png">
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
 </head>
 
