--- a/index.html
+++ b/index.html
@@ -7,15 +7,37 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Página Inicial</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="icon" href="assets/fav-icon.png">
+    <link rel="icon" href="assets/images/fav-icon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/reset.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/style-header.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/style-content.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
 </head>
 
 <body>
 
+    <article>
+        <header class="row">
+            <a href="index.html" class="column">
+                <i class="fa-solid fa-house fa-lg">
+                    home
+                </i>
+            </a>
+            <!--
+                <img src="assets/images/tricks-logo.png" alt="Página Inicial" class="img-logo">
+                <img src="assets/images/tricks-logo.png" alt="Página Inicial" width="50" height="50">
+            -->
+        </header>
+    </article>
+
     <div class="container">
 
-        <h1>Conteúdos</h1>
+        <h2 class="title">
+            Conteúdos
+        </h2>
 
         <a href="./box-shadow/index.html">
             Box-Shadow
@@ -31,6 +53,10 @@
 
         <a href="./dropdown/index.html">
             Dropdown
+        </a>
+
+        <a href="./logos/logos.html">
+            Logos
         </a>
 
         <a href="./loaders/basic/index.html">
