--- a/logos/logos.html
+++ b/logos/logos.html
@@ -35,6 +35,10 @@
       Conteúdo - Logos
     </h2>
 
+    <a href="instagram/index.html">
+      Instagram
+    </a>
+
     <a href="netflix/index.html">
       Netflix
     </a>
