texto com gradiente

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <header class="row">
             <a href="index.html" class="column">
                 <i class="fa-solid fa-house fa-lg">
-                    home
+                    <span class="color-header">
+                        home
+                    </span>
                 </i>
             </a>
             <!--
@@ -35,7 +37,7 @@
 
     <div class="container">
 
-        <h1 class="title">
+        <h1 class="title color-header">
             Conteúdos
         </h1>
 
