menu dos loaders

--- a/index.html
+++ b/index.html
@@ -61,16 +61,8 @@
             Logos
         </a>
 
-        <a href="./loaders/basic/index.html">
-            Loaders - Basic
-        </a>
-
-        <a href="./loaders/custom/index.html">
-            Loaders - Custom
-        </a>
-
-        <a href="./loaders/endless/index.html">
-            Loaders - Endless
+        <a href="./loaders/index.html">
+            Loaders
         </a>
 
         <a href="./placeholder/shown/index.html">
