--- a/button/animated/index.html
+++ b/button/animated/index.html
@@ -5,15 +5,17 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Placeholder-Shown</title>
+    <title>Botão Animado</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <script src='script.js'></script>
 </head>
 
 <body>
 
-    <button class="bubbly-button">Click Here!</button>
+    <button class="bubbly-button">
+        Click Here!
+    </button>
 
 </body>
 
