loader - rocket / floating bottle

--- a/loaders/index.html
+++ b/loaders/index.html
@@ -47,8 +47,16 @@
       Endless
     </a>
 
+    <a href="floating-bottle/index.html">
+      Floating Bottle
+    </a>
+
     <a href="infinite/index.html">
       Infinite
+    </a>
+
+    <a href="rocket/index.html">
+      Rocket
     </a>
 
   </div>
